Fix alignments

--- a/assets/css/clubs.css
+++ b/assets/css/clubs.css
@@ -9,3 +9,12 @@
     font-family: 'Montserrat', sans-serif;
     color: #000000;
 }
+
+/* news section////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+.news-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
